--- a/code/Translations/AL Intro.g.xlf
+++ b/code/Translations/AL Intro.g.xlf
@@ -603,6 +603,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item Card - Action RiseAnError - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 643731988 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Clear Item Description.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJAClearDescription - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 643731988 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Clear Item Description</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJAClearDescription - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 2399628869 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Executes the LJARunImport action.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 2399628869 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Update Item Description [TryFunction]</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 1234670995 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Executes the LJARunImport action.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport2 - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 1234670995 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Update Item Description [OnRun]</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport2 - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 2405092001 - Control 1030421297 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2420212404">
           <source>Field specifies Custom Reference</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -632,6 +662,11 @@
           <source>Field specifies Custom Reference</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Sales Invoice - Control LJA Custom Reference - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3083754243 - Field 3383278530 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2072992664">
+          <source>Extra Counter</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CUK Purchase Header - Field Extra Counter - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 2107848747 - Field 1030421297 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2733917450">
           <source>Custom Reference</source>
