--- a/code/Translations/AL Intro.g.xlf
+++ b/code/Translations/AL Intro.g.xlf
@@ -533,6 +533,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report LJA VAT Statement - NamedType VATStatementTxt</note>
         </trans-unit>
+        <trans-unit id="PageExtension 1613735485 - Control 2000650037 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 3542408424">
+          <source>Specifies the value of the RichText Content field.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Contact Card - Control LJA RichText Content - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1613735485 - Control 2000650037 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 3542408424">
+          <source>RichText Content</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Contact Card - Control LJA RichText Content - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3217196489 - Action 360998715 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 523354100">
           <source>Update credit limit</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -613,25 +623,25 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJAClearDescription - Property Caption</note>
         </trans-unit>
-        <trans-unit id="PageExtension 1043495292 - Action 2399628869 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+        <trans-unit id="PageExtension 1043495292 - Action 2377172325 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
           <source>Executes the LJARunImport action.</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport - Property ToolTip</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImportOnRun - Property ToolTip</note>
         </trans-unit>
-        <trans-unit id="PageExtension 1043495292 - Action 2399628869 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
-          <source>Update Item Description [TryFunction]</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 1043495292 - Action 1234670995 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
-          <source>Executes the LJARunImport action.</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport2 - Property ToolTip</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 1043495292 - Action 1234670995 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+        <trans-unit id="PageExtension 1043495292 - Action 2377172325 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
           <source>Update Item Description [OnRun]</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImport2 - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImportOnRun - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 2921863114 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Executes the LJARunImport action.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImportTryFunction - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1043495292 - Action 2921863114 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4178721393">
+          <source>Update Item Description [TryFunction]</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Item List - Action LJARunImportTryFunction - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 2405092001 - Control 1030421297 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2420212404">
           <source>Field specifies Custom Reference</source>
@@ -663,10 +673,15 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension LJA Sales Invoice - Control LJA Custom Reference - Property ToolTip</note>
         </trans-unit>
-        <trans-unit id="TableExtension 3083754243 - Field 3383278530 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2072992664">
+        <trans-unit id="TableExtension 3083754243 - Field 545869533 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2072992664">
           <source>Extra Counter</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CUK Purchase Header - Field Extra Counter - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CUK Purchase Header - Field CUK Extra Counter - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 636081969 - Field 2000650037 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3993128796">
+          <source>LJA RichText Content</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension LJA Contact - Field LJA RichText Content - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 2107848747 - Field 1030421297 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 2733917450">
           <source>Custom Reference</source>
